added code to fix linf and predict age from length

--- a/apppendices/4-02-appendix-Growth-and-Condition/index.Rmd
+++ b/apppendices/4-02-appendix-Growth-and-Condition/index.Rmd
@@ -10,7 +10,8 @@ output:
 ---
 
 <!--
-need to assign birthday to recpatures by pit tag...
+* need to account for repeated captures within fish...
+* need a way to estimate t0
 
 -->
 
