estimating age from length

--- a/apppendices/4-02-appendix-Growth-and-Condition/index.Rmd
+++ b/apppendices/4-02-appendix-Growth-and-Condition/index.Rmd
@@ -20,7 +20,7 @@ source("R/1_global.R")
 source("R/2_functions.R")         
 source("R/3_load-and-clean.R")
 source("R/4_figures.R")          
-source("R/5_tables.R",sep=""))
+source("R/5_tables.R")
 ```
 
 
